# RCA_copilot

./: .dockerignore  .env.example  .gitignore  .zuul.yaml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
backend/: Dockerfile  __init__.py  api_v1.py  config.py  database.py  main.py  models.py  provider_registry.py  provider_security.py  repository.py  security.py
collector/: __init__.py  batcher.py  client.py  config.py  journal.py  runner.py  state.py
correlation_worker/: Dockerfile  config.py  correlator.py  healthcheck.py  repository.py  worker.py
devstack/: plugin.sh  settings
horizon_plugin/: README.md  pyproject.toml  setup.cfg
horizon_plugin/rca_copilot_horizon/: client.py  dashboard.py  tests.py
horizon_plugin/rca_copilot_horizon/dashboards/rca_copilot/: dashboard.py  policy.py
horizon_plugin/rca_copilot_horizon/dashboards/rca_copilot/incidents/: panel.py  urls.py  views.py
horizon_plugin/rca_copilot_horizon/dashboards/rca_copilot/investigation/: panel.py  urls.py  views.py
horizon_plugin/rca_copilot_horizon/dashboards/rca_copilot/overview/: panel.py  urls.py  views.py
horizon_plugin/rca_copilot_horizon/dashboards/rca_copilot/settings/: panel.py  urls.py  views.py
horizon_plugin/rca_copilot_horizon/dashboards/rca_copilot/system_health/: panel.py  urls.py  views.py
horizon_plugin/rca_copilot_horizon/enabled/: _9000_rca_copilot.py  _9005_rca_panel_group.py  _9010_rca_overview.py  _9020_rca_incidents.py  _9030_rca_investigation.py  _9040_rca_system_health.py  _9050_rca_settings.py
horizon_plugin/rca_copilot_horizon/static/rca_copilot/: cytoscape.min.js  rca_copilot.css  rca_copilot.js  rca_copilot.scss
horizon_plugin/rca_copilot_horizon/templates/rca_copilot/: _common.html  incidents.html  investigation.html  investigation_empty.html  overview.html  settings.html  settings_provider_section.html  system_health.html
horizon_plugin/rca_copilot_horizon/templatetags/: get_item.py
horizon_plugin/tests/: test_settings_foundation.py
(+113 files in other folders)
