[metadata]
name = rca-copilot
summary = Evidence-first root cause analysis for OpenStack
description_file = README.md
description_content_type = text/markdown
author = RCA Copilot Contributors
license = MIT
python_requires = >=3.11
classifier =
    Environment :: OpenStack
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[files]
packages =
    backend
    collector
    correlation_worker
    enrichment_worker
    incident_worker
    parser_worker
    rca_copilot
data_files =
    etc/rca-copilot =
        etc/rca-copilot.conf.sample
        etc/policy.yaml
    lib/systemd/system =
        systemd/rca-copilot-api.service
        systemd/rca-copilot-collector.service
        systemd/rca-copilot-parser-worker.service
        systemd/rca-copilot-correlation-worker.service
        systemd/rca-copilot-incident-worker.service
        systemd/rca-copilot-enrichment-worker.service

[entry_points]
console_scripts =
    rca-copilot-api = rca_copilot.cmd.api:main
    rca-copilot-collector = collector.runner:main
    rca-copilot-parser-worker = parser_worker.worker:main
    rca-copilot-correlation-worker = correlation_worker.worker:main
    rca-copilot-incident-worker = incident_worker.worker:main
    rca-copilot-enrichment-worker = enrichment_worker.worker:main
oslo.config.opts =
    rca_copilot = rca_copilot.config:list_opts

[pbr]
skip_authors = true
skip_changelog = true

[bdist_wheel]
universal = 0
