[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "rca-copilot-horizon"
version = "0.1.0"
description = "OpenStack Horizon dashboard plugin for RCA Copilot"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
rca_copilot_horizon = [
  "enabled/*.py",
  "templates/**/*.html",
  "static/**/*",
]
